change flex-direction and fixing overflow problem in agreement section

--- a/resources/assets/sass/agreement/agreement.scss
+++ b/resources/assets/sass/agreement/agreement.scss
@@ -52,9 +52,18 @@
       justify-content: space-around;
       width: 100%;
 
+      @media #{$mobile545} {
+        flex-direction: column;
+      }
+
       article{
         width: 70%;
 
+        @media #{$mobile545} {
+          width: 80%;
+          margin-bottom: 20px;
+          text-align: center;
+        }
       }
 
       &__wp{
@@ -62,6 +71,7 @@
         text-decoration: none;
         width: 25%;
         padding: 5px 0;
+        border:1px solid transparent;
 
 
         &:hover{
@@ -69,8 +79,18 @@
           border-radius: 25px;
         }
 
+        @media #{$mobile545} {
+          width: 45%;
+        }
+
         img{
           margin-right: 20px;
+
+          @media #{$mobile} {
+            width: 28px;
+            margin-right: 10px;
+          }
+
         }
 
         .title{
